<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical" >

    <androidx.cardview.widget.CardView
        android:id="@+id/card_holder"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        app:cardBackgroundColor="@color/colorPageCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/page_card_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.959"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <ImageView
                android:id="@+id/photoImage"
                android:layout_width="59dp"
                android:layout_height="41dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/photo_image"
                android:scrollbarTrackVertical="@android:drawable/ic_menu_camera"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_camera" />

            <ImageButton
                android:id="@+id/playRecorder"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#00C4C49C"
                android:contentDescription="@string/recorderd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delCard"
                app:layout_constraintStart_toEndOf="@+id/photoImage"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_speaker" />

            <ImageView
                android:id="@+id/delCard"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.941"
                app:layout_constraintStart_toEndOf="@+id/photoImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.777"
                app:srcCompat="@drawable/ic_trash" />

            <ImageButton
                android:id="@+id/recorderPuse"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#00A7CE45"
                android:contentDescription="@string/puseRecorder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delCard"
                app:layout_constraintStart_toEndOf="@+id/photoImage"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_recored_stop" />

            <ImageButton
                android:id="@+id/recorderContinue"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:background="#00A7CE45"
                android:contentDescription="@string/playRecorder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delCard"
                app:layout_constraintStart_toEndOf="@+id/photoImage"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_recored_start" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>