<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".book_library.BookLibrary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/book_library_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="70dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/book_library"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_book_library"
            android:layout_width="match_parent"
            android:layout_height="529dp"
            android:layout_below="@+id/book_library_title"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="103dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/show_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/book_library_title"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:buttonTint="@color/colorLibrary"
            android:fontFamily="casual"
            android:text="private" />

        <CheckBox
            android:id="@+id/show_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/book_library_title"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_toStartOf="@+id/show_private"
            android:layout_toLeftOf="@+id/show_private"
            android:buttonTint="@color/colorLibrary"
            android:fontFamily="casual"
            android:text="public" />

        <CheckBox
            android:id="@+id/show_sounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/book_library_title"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="64dp"
            android:buttonTint="@color/colorLibrary"
            android:fontFamily="casual"
            android:text="@string/sound" />

        <CheckBox
            android:id="@+id/show_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/book_library_title"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="64dp"
            android:layout_toEndOf="@+id/show_sounds"
            android:layout_toRightOf="@+id/show_sounds"
            android:buttonTint="@color/colorLibrary"
            android:fontFamily="casual"
            android:text="@string/images" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>